--- a/midland-bs-mannager/src/main/resources/properties/staging/application.properties
+++ b/midland-bs-mannager/src/main/resources/properties/staging/application.properties
@@ -1,15 +1,13 @@
-﻿﻿﻿﻿# JDBC Global Setting
-
-redis.host=localhost
+﻿# JDBC Global Setting
+#redis配置
+redis.host=web2-redis-s.midlandmap.cn
 redis.port=6379
 redis.pass=
-
+#mysql配置
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://43.254.55.177:3306/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-jdbc.username=root
-jdbc.password=z-9a]e9W1TAk2!)z
-
-
+jdbc.url=jdbc:mysql://djweb-s-db.midlandmap.cn:3309/midland?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+jdbc.username=web2
+jdbc.password=Midweb2018
 
 ##DataSource Global Setting
 
@@ -31,5 +29,4 @@ redis.pool.maxTotal=1024
 redis.pool.maxIdle=200
 redis.pool.maxWaitMillis=1000
 redis.pool.testOnBorrow=true
-
 
