--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
         <module>midland-web-portal</module>
     </modules>
 
+    <properties>
+        <!-- 设置默认编码 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 
     <pluginRepositories>
         <pluginRepository>
