--- a/midland-bs-mannager/src/main/resources/properties/mail_SMS.properties
+++ b/midland-bs-mannager/src/main/resources/properties/mail_SMS.properties
@@ -1,7 +1,7 @@
 #邮箱配置
 mail.host=smtp.qq.com
-mail.username=3332932@qq.com
-mail.authcode=fcekyatucsxkbjgi
+mail.username=111111@qq.com
+mail.authcode=12345
 mail.SSL_FACTORY=javax.net.ssl.SSLSocketFactory
 mail.fallback=false
 mail.port=465
